test/syntax-errors/appel_de_fonction1.sos
# operande appel de fonction vide n'existe pas

id = $()